overflow fixed

--- a/src/components/courses/Courses.module.css
+++ b/src/components/courses/Courses.module.css
@@ -3,7 +3,6 @@
     color: #f1f1f1;
     width: 100vw;
     height: 100vh;
-    overflow-y: scroll;
     position: relative;
 }
 
